{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 42,
  "lineage": "e9cd4412-9b58-f6d9-daa0-43044f4584ee",
  "resources": [
    {
      "module": "module.FlaskVPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Flask_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:internet-gateway/igw-047413ecfa42c4076",
            "id": "igw-047413ecfa42c4076",
            "owner_id": "642655931180",
            "vpc_id": "vpc-00c8cfde8628e4446"
          },
          "dependencies": [
            "module.FlaskVPC.aws_vpc.Flask_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.FlaskVPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:route-table/rtb-0a7a79d78f7b41a72",
            "id": "rtb-0a7a79d78f7b41a72",
            "owner_id": "642655931180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047413ecfa42c4076",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public router"
            },
            "tags_all": {
              "Name": "Public router"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c8cfde8628e4446"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.FlaskVPC.aws_internet_gateway.Flask_IG",
            "module.FlaskVPC.aws_vpc.Flask_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.FlaskVPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023be63d66986aedc",
            "route_table_id": "rtb-0a7a79d78f7b41a72",
            "subnet_id": "subnet-044c46e072a54ea30"
          },
          "dependencies": [
            "module.FlaskVPC.aws_internet_gateway.Flask_IG",
            "module.FlaskVPC.aws_route_table.public",
            "module.FlaskVPC.aws_subnet.Public_subnet",
            "module.FlaskVPC.aws_vpc.Flask_VPC",
            "module.FlaskVPC.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a0da9fd099dcd54",
            "route_table_id": "rtb-0a7a79d78f7b41a72",
            "subnet_id": "subnet-03700b5c0579e6997"
          },
          "dependencies": [
            "module.FlaskVPC.aws_internet_gateway.Flask_IG",
            "module.FlaskVPC.aws_route_table.public",
            "module.FlaskVPC.aws_subnet.Public_subnet",
            "module.FlaskVPC.aws_vpc.Flask_VPC",
            "module.FlaskVPC.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.FlaskVPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Flask_Securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:security-group/sg-04cf84092378b4ab4",
            "description": "Flask security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cf84092378b4ab4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Flask_Securitygroup",
            "name_prefix": "",
            "owner_id": "642655931180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Flask_project_SG"
            },
            "tags_all": {
              "Name": "Flask_project_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c8cfde8628e4446"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.FlaskVPC.aws_vpc.Flask_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.FlaskVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:subnet/subnet-0959ddaaebce74d2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0959ddaaebce74d2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642655931180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Flask-Private-1"
            },
            "tags_all": {
              "Name": "Flask-Private-1"
            },
            "vpc_id": "vpc-00c8cfde8628e4446"
          },
          "dependencies": [
            "module.FlaskVPC.aws_vpc.Flask_VPC",
            "module.FlaskVPC.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:subnet/subnet-01d6c6c9884fdeda7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.200.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d6c6c9884fdeda7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642655931180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Flask-Private-2"
            },
            "tags_all": {
              "Name": "Flask-Private-2"
            },
            "vpc_id": "vpc-00c8cfde8628e4446"
          },
          "dependencies": [
            "module.FlaskVPC.aws_vpc.Flask_VPC",
            "module.FlaskVPC.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.FlaskVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:subnet/subnet-044c46e072a54ea30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.200.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044c46e072a54ea30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642655931180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Flask-Public-1"
            },
            "tags_all": {
              "Name": "Flask-Public-1"
            },
            "vpc_id": "vpc-00c8cfde8628e4446"
          },
          "dependencies": [
            "module.FlaskVPC.aws_vpc.Flask_VPC",
            "module.FlaskVPC.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:subnet/subnet-03700b5c0579e6997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03700b5c0579e6997",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642655931180",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Flask-Public-2"
            },
            "tags_all": {
              "Name": "Flask-Public-2"
            },
            "vpc_id": "vpc-00c8cfde8628e4446"
          },
          "dependencies": [
            "module.FlaskVPC.aws_vpc.Flask_VPC",
            "module.FlaskVPC.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.FlaskVPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Flask_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:vpc/vpc-00c8cfde8628e4446",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-018f7e6d2a83dc24e",
            "default_route_table_id": "rtb-0eb7f85ad20fe0912",
            "default_security_group_id": "sg-070868df5b69fb3db",
            "dhcp_options_id": "dopt-02eb100148a88a4a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c8cfde8628e4446",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb7f85ad20fe0912",
            "owner_id": "642655931180",
            "tags": {
              "Environment": "Production",
              "Name": "FlaskApplication-VPC",
              "Owner": "Abilash"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "FlaskApplication-VPC",
              "Owner": "Abilash"
            }
          }
        }
      ]
    },
    {
      "module": "module.Flaskec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Flaskec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e812285fd54f7620",
            "arn": "arn:aws:ec2:ap-southeast-2:642655931180:instance/i-0cfb7cc41454ebb85",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfb7cc41454ebb85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0986ffaa9366ede7b",
            "private_dns": "ip-10-200-0-142.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.0.142",
            "public_dns": "ec2-54-252-254-136.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.252.254.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0588f20c01bd36312",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-04cf84092378b4ab4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-044c46e072a54ea30",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cf84092378b4ab4"
            ]
          },
          "dependencies": [
            "module.FlaskVPC.aws_security_group.Flask_Securitygroup",
            "module.FlaskVPC.aws_subnet.Public_subnet",
            "module.FlaskVPC.aws_vpc.Flask_VPC",
            "module.FlaskVPC.data.aws_availability_zones.az"
          ]
        }
      ]
    }
  ]
}